Correct spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   font-family: Overpass, sans-serif;
-  background-image: linear-gradient(to bottom,#ff9500,#ff5e3a);
+  background-image: linear-gradient(to bottom, #ff9500, #ff5e3a);
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
@@ -24,6 +24,8 @@ html {
 
 @media only screen and (min-width: 60em) {
 
-
+  .hr {
+    border-bottom: none;
+  }
 
 }
